fix resets (move overflow: hidden from * to body selector)

--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  overflow: hidden;
   padding: 0;
 }
