--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ body {
   justify-content: space-between;
   font-family: 'Raleway', sans-serif;
   height: 100vh;
+  overflow: hidden;
 
   %bar {
     padding: 0.5rem;
